[package]
name = "serial_rtic"
version = "0.1.0"
authors = ["nebelgrau"]
edition = "2018"

[dependencies]

cortex-m = "^0.6.1"
cortex-m-rt = "^0.6.10"

stm32f4xx-hal = {version = "^0.7", features = ["stm32f411", "rt"]}
stm32f4 = "0.9.0"

nb = "^0.1"
bare-metal = {version = "^0.2.5", features = ["const-fn"]}
embedded-hal = {version = "^0.2.3", features = ["unproven"]}

panic-halt = "0.2.0"

mpu6050 = "0.1.3"

cortex-m-rtic = "~0.5.1"

[profile.release]
debug = true
lto = true
opt-level = "z"